fixed visibility isue adress

--- a/src/components/GoalCard.css
+++ b/src/components/GoalCard.css
@@ -39,7 +39,7 @@
     .creatorAddress {
       display: flex;
       flex-direction: column;
-      font-size: 0.rem;
+      font-size: 1rem;
     }
 
     .creatorAddress > h2 {
